[package]
name = "license-generator"
description = "Command line tool for generating license files."
keywords = ["license","generator", "cli"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/azu/license-generator"
version = "0.5.0"
authors = ["azu <azuciao@gmail.com>"]
edition = "2018"
include = [
    "files/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[[bin]]
name = "license"
path = "src/main.rs"

[dependencies]
structopt = "0.2.14"
chrono = "0.4"
